--- a/index.html
+++ b/index.html
@@ -48,29 +48,28 @@
           <img src="img/all/4.jpg" alt="" />
           <img src="img/all/5.jpg" alt="" />
           <img src="img/all/6.jpg" alt="" />
-          <img src="img/all/7.jpg" alt="" />
           <img src="img/all/8.jpg" alt="" />
-          <img src="img/all/9.jpg" alt="" />
-          <img src="img/all/10.jpg" alt="" />
-          <img src="img/all/11.jpg" alt="" />
-          <img src="img/all/12.jpg" alt="" />
-          <img src="img/all/13.jpg" alt="" />
-          <img src="img/all/14.jpg" alt="" />
-          <img src="img/all/12.jpg" alt="" />
-          <img src="img/all/13.jpg" alt="" />
-          <img src="img/all/14.jpg" alt="" />
-          <img src="img/all/15.jpg" alt="" />
-          <img src="img/all/16.jpg" alt="" />
-          <img src="img/all/17.jpg" alt="" />
-          <img src="img/all/18.jpg" alt="" />
-          <img src="img/all/19.jpg" alt="" />
-          <img src="img/all/20.jpg" alt="" />
-          <img src="img/all/21.jpg" alt="" />
-          <img src="img/all/22.jpg" alt="" />
-          <img src="img/all/23.jpg" alt="" />
-          <img src="img/all/24.jpg" alt="" />
-          <img src="img/all/25.jpg" alt="" />
-          <img src="img/all/26.jpg" alt="" />
+          <img src="img/all/9.png" alt="" />
+          <img src="img/all/10.png" alt="" />
+          <img src="img/all/11.png" alt="" />
+          <img src="img/all/12.png" alt="" />
+          <img src="img/all/13.png" alt="" />
+          <img src="img/all/14.png" alt="" />
+          <img src="img/all/12.png" alt="" />
+          <img src="img/all/13.png" alt="" />
+          <img src="img/all/14.png" alt="" />
+          <img src="img/all/15.png" alt="" />
+          <img src="img/all/16.png" alt="" />
+          <img src="img/all/17.png" alt="" />
+          <img src="img/all/18.png" alt="" />
+          <img src="img/all/19.png" alt="" />
+          <img src="img/all/20.png" alt="" />
+          <img src="img/all/21.png" alt="" />
+          <img src="img/all/22.png" alt="" />
+          <img src="img/all/23.png" alt="" />
+          <img src="img/all/24.png" alt="" />
+          <img src="img/all/25.png" alt="" />
+          <img src="img/all/26.png" alt="" />
           <!--  <img src="img/all/11.jpg" alt="">
               <img src="img/all/12.jpg" alt="">
               <img src="img/all/1.jpg" alt="">
